--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
-    "pg": "^8.16.3"
+    "morgan": "^1.10.1",
+    "pg": "^8.16.3",
+    "redis": "^5.8.3"
   },
   "devDependencies": {
     "eslint": "^9.37.0",
