--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
-    "redis": "^5.8.3"
+    "redis": "^5.8.3",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "eslint": "^9.37.0",
