--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "redis": "^5.8.3",
+    "sequelize": "^6.37.7",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
